--- a/.gitignore
+++ b/.gitignore
@@ -4,8 +4,11 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 package-lock.json
+/.pnp
+.pnp.js
 
 # Environment Variables
+.DS_Store
 .env
 .env.local
 .env.development.local
@@ -39,6 +42,7 @@ Thumbs.db
 # Backend specific
 backend/node_modules/
 backend/.env
+backend/uploads
 
 # Frontend specific
 frontend/node_modules/
@@ -47,3 +51,6 @@ frontend/.env
 
 # Misc
 coverage/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
